# cnm

./: README.md  main.c  meson.build
assets/shaders/: test.frag  test.vert
assets/shaders/flatShader/: fragment.frag  vertex.vert
assets/shaders/outline/: fragment.frag  vertex.vert
assets/shaders/playerShaders/: line.frag  line.vert  sprite.vert
assets/shaders/spriteShader/: fragment.frag  geometry.geom  vertex.vert
assets/shaders/texturedShader/: vertex.vert
gfx/: model.c  model.h  shader.c  shader.h  texture.c  texture.h
scripts/: run.sh
src/: main.c
src/gfx/: camera.c  camera.h  framebuffer.c  framebuffer.h  lineRenderer.c  lineRenderer.h  model.c  model.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/gfx/anim/: limbIk.c  limbIk.h
src/gfx/renderers/: line.c  line.h  player.c  player.h
src/util/: math.c  math.h  util.c  util.h
util/: util.c
